--- a/URLShortener/appsettings.json
+++ b/URLShortener/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ".",
+    "DefaultConnection": "Server=sqlserver-96230;Database=UrlShortenerDatabase;User Id=testuser1;Password=myStrongPassword12#;MultipleActiveResultSets=true;",
     "URLShortenerDbContextConnection": "."
   },
   "Logging": {
