--- a/URLShortener/appsettings.json
+++ b/URLShortener/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sqlserver-96230;Database=UrlShortenerDatabase;User Id=testuser1;Password=myStrongPassword12#;MultipleActiveResultSets=true;",
-    "URLShortenerDbContextConnection": "."
+    "DefaultConnection": "Server=sqlserver;Database=UrlShortenerDatabase;User Id=sa;Password=myStrongPassword12#;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
