--- a/URLShortener/appsettings.json
+++ b/URLShortener/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sqlserver;Database=UrlShortenerDatabase;User Id=sa;Password=myStrongPassword12#;MultipleActiveResultSets=true;"
+    "DefaultConnection": "Server=sqlserver;Database=UrlShortenerDatabase;User Id=sa;Password=myStrongPassword12#;MultipleActiveResultSets=true;",
+    "URLShortenerDbContextConnection": "."
   },
   "Logging": {
     "LogLevel": {
